# KHDP-API

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  RELEASE.md  REST_API.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  branch-protection.md
.github/workflows/: ci.yml  i18n-stale-check.yml  publish.yml  worker-deploy.yml
docs/: REST_API.md  backend-request.md  example.khdp.local.toml  i18n-manifest.json  quickstart.en.md  quickstart.es.md  quickstart.ja.md  quickstart.ko.md  quickstart.zh-CN.md
examples/: README.md
examples/notebook/: quickstart.ipynb
examples/python/: 01_anonymous_search.py  02_dataset_detail.py  03_authenticated_download.py
openapi/: v1.json
src/khdp/: __init__.py  __main__.py  cli.py  cli_datasets.py  cli_submissions.py  config.py  mcp_server.py  oauth.py  session.py  token_store.py
src/khdp/supertable/: __init__.py  client.py  exceptions.py  mcp_tools.py
supertable/: README.md  USAGE.md
supertable/examples/: 01_quickstart.py  02_dataframe.py  03_keyset_chunking.py
supertable/skills/supertable/: SKILL.md
tests/: test_auth_client.py  test_cli_datasets.py  test_config.py  test_session.py  test_token_set.py  test_token_store.py
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
worker/test/: index.test.ts
wrappers/claude-code/: README.md
wrappers/claude-code/skills/khdp-auth/: SKILL.md
wrappers/codex/: AGENTS.md  README.md  config.example.toml
wrappers/gemini/: GEMINI.md  README.md  extension.json  settings.example.json
