[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "khdp"
version = "0.2.0"
description = "KHDP connector + SNUH SuperTable client. CLI + MCP server for the Korea Health Data Platform and the SNUH SuperTable SQL gateway, with wrappers for Claude Code, OpenAI Codex, and Gemini."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Korea Health Data Platform", email = "vital@snu.ac.kr" },
]
keywords = ["khdp", "oauth", "mcp", "healthcare", "omop", "fhir", "supertable", "snuh", "vitaldb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "platformdirs>=4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/KoreaHealthDataPlatform/KHDPConnector"
Repository = "https://github.com/KoreaHealthDataPlatform/KHDPConnector"
Issues = "https://github.com/KoreaHealthDataPlatform/KHDPConnector/issues"
Documentation = "https://github.com/KoreaHealthDataPlatform/KHDPConnector#readme"

[project.scripts]
khdp = "khdp.cli:main"
khdp-mcp = "khdp.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/khdp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
